base/minio/networkpolicies/egress-to-minio.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: egress-to-minio
spec:
  namespaceSelector: k8up == 'backup-enabled'
  selector: has(job-name)
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'minio'
        selector: app.kubernetes.io/name == 'minio'
        ports:
          - 9000
