base/minio/networkpolicies/ingress-nginx-egress-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-minio
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: minio
            app.kubernetes.io/name: minio
            "k8s:io.kubernetes.pod.namespace": minio
      toPorts:
        - ports:
            - port: "9000" # minio-api
              protocol: TCP
            - port: "9001" # minio-console
              protocol: TCP
