base/minio/networkpolicies/k8up-jobs-egress-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: k8up-jobs-egress-minio
spec:
  description: "Allow k8up jobs to connect to minio"
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.k8up: backup-enabled
    matchExpressions:
      - key: job-name
        operator: Exists
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: minio
            namespace: minio
      toPorts:
        - ports:
            - port: "9000"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube-api
