base/minio/networkpolicies/k8up-jobs.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: k8up-jobs
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace.labels.k8up: backup-enabled
    matchExpressions:
      - key: job-name
        operator: Exists
  egress:
    - toServices:
        - k8sService:
            serviceName: minio
            namespace: minio
      toPorts:
        - ports:
            - port: "9000"
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"  # kube-api
