base/minio/networkpolicies/minio-ingress-k8up-jobs.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-ingress-k8up-jobs
  namespace: minio
spec:
  description: "Allow k8up jobs to connect to minio"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: minio
      app.kubernetes.io/name: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": healthchecks
            k8upjob: "true"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": filebrowser
            k8upjob: "true"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": keycloak
            k8upjob: "true"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": k8up
            k8upjob: "true"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": media
            k8upjob: "true"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": nextcloud
            k8upjob: "true"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": wiki
            k8upjob: "true"
      toPorts:
        - ports:
            - port: "9000" # minio-api
              protocol: TCP
