base/minio/networkpolicies/minio-ingress-mirrio.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio-ingress-mirrio
  namespace: minio
spec:
  description: "Allow mirrio to connect to minio"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: minio
      app.kubernetes.io/name: minio
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: gitlab-backup-mirror
            component: job
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "9000" # minio-api
              protocol: TCP
