base/minio/networkpolicies/nginx-egress-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-minio
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: minio
            namespace: minio
      toPorts:
        - ports:
            - port: "9000" # minio-api
              protocol: TCP
            - port: "9001" # minio-console
              protocol: TCP
