base/minio/networkpolicies/prometheus-egress-minio.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-minio
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: minio
            app.kubernetes.io/name: minio
            io.kubernetes.pod.namespace: minio
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
