base/minio/networkpolicies/traefik-egress-minio.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik-egress-minio
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: traefik-traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: minio
            app.kubernetes.io/name: minio
            io.kubernetes.pod.namespace: minio
      toPorts:
        - ports:
            - port: "9000" # minio-api
              protocol: TCP
            - port: "9001" # minio-console
              protocol: TCP
